feat: edit content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <h2 class="top"><a href="https://github.com/Natallia-Bakinouskaya/rsschool-cv/blob/gh-pages/cv.md" title="My cv.md file">rsschool-cv</a></h2>
         <h1 class="top">Natallia Bakinouskaya</h1>
-        <h1 class="top">JUNIOR FRONT-END divELOPER</h1>
+        <h1 class="top">JUNIOR FRONT-END DEVELOPER</h1>
         <nav>
             <ul class="menu">
                 <li > CONTACTS</li>
